# voice-rag-assistance

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.yml  faiss_ingest.py  faiss_retrieve.py  gemini_test.py  llm_test.py  pyproject.toml  requirements.txt  test_app.py
backend/app/: config.py  main.py  urls.py
backend/app/data/: intent_keywords.json
backend/app/routers/: query_router.py  twilio_router.py
backend/app/services/: intent_service.py  llm_factory.py  logger_service.py  order_service.py  rag_service.py
backend/app/services/llm_providers/: __init__.py  base.py  gemini_provider.py  llm_enums.py  openai_provider.py
backend/app/utils/: utility.py  validation.py
backend/data.local/: billing_info.md  product_info.md  promotional_offers.md  return_policy.md  shipping_faq.md
backend/scripts/: ingest_full.py
frontend/: index.html  main.js  style.css
