[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "python-dotenv>=1.1.1",
    "faiss-cpu>=1.2.0",
    "fastapi>=0.118.0",
    "fuzzywuzzy>=0.18.0",
    "google-genai>=1.40.0",
    "gtts>=2.5.4",
    "ipython>=8.37.0",
    "openai>=2.0.1",
    "sentence-transformers>=5.1.1",
    "python-levenshtein>=0.27.1",
    "twilio>=9.8.3",
    "uvicorn>=0.37.0",
]
